--- a/H1EmuLauncher/Language/StringResources.bg-BG.xaml
+++ b/H1EmuLauncher/Language/StringResources.bg-BG.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Версията</system:String>
     <system:String x:Key="item4">Моля Изчакай</system:String>
     <system:String x:Key="item8">Играй</system:String>
+    <system:String x:Key="item9">Проверете дали сте избрали правилната директория, съдържаща вашите файлове на играта, това може да стане в менюто Настройки.</system:String>
     <system:String x:Key="item10">Внимание:</system:String>
     <system:String x:Key="item11">рябва да притежавате H1Z1: Just Survive във вашия акаунт в Steam, за да го изтеглите. Този проект не поддържа пиратство.</system:String>
     <system:String x:Key="item12">Присъеденете се в общноста на</system:String>
     <system:String x:Key="item13">Грешка при стартирането на играта:</system:String>
-    <system:String x:Key="item14">Играта не е открита в избраната категория.\n\nПроверете дали сте избрали правилната директория, съдържаща вашите файлове на играта, това може да стане в менюто Настройки.</system:String>
+    <system:String x:Key="item14">Играта не е открита в избраната категория.</system:String>
     <system:String x:Key="item15">Трябва да притежавате H1Z1: Just Survive във вашия Steam акаунт, за да изтеглите.</system:String>
     <system:String x:Key="item17">Влизането в Steam профила е неуспешно :</system:String>
     <system:String x:Key="item18">Добави</system:String>
+    <system:String x:Key="item19">Моля, не забравяйте да попълните полето Auth Code.</system:String>
     <system:String x:Key="item21">Получих ключ за депо за {0} резултат: {1}</system:String>
     <system:String x:Key="item23">Инсталирането е готово!</system:String>
     <system:String x:Key="item24">Трябва да инсталирате друга версия.? Натиснете бутона отдолу за да изтеглете отново!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Processing depot {0} - {1}</system:String>
     <system:String x:Key="item57">Pre-allocating space...</system:String>
     <system:String x:Key="item58">Версията на играта не се поддържа от H1Emu.\n\nМоля, не забравяйте да използвате версия на играта 15 януари 2015 г. или 22 декември 2016 г.\n\nТрябва да изтеглите една от тези версии, като използвате този стартер с вашия акаунт в Steam, който притежава Just Survive.</system:String>
-    <system:String x:Key="item59">Потребителско име</system:String>
-    <system:String x:Key="item60">Парола</system:String>
+    <system:String x:Key="item59">Потребителско име...</system:String>
+    <system:String x:Key="item60">Парола...</system:String>
     <system:String x:Key="item61">Вижте пълни подробности за обновлението...</system:String>
     <system:String x:Key="item62">Настройки...</system:String>
     <system:String x:Key="item63">Специално благодарим на всеки ,които се присъедини към обществото и държа надеждата жива!</system:String>
