--- a/H1EmuLauncher/Language/StringResources.de-DE.xaml
+++ b/H1EmuLauncher/Language/StringResources.de-DE.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Aktualisieren</system:String>
     <system:String x:Key="item4">Warten Sie mal</system:String>
     <system:String x:Key="item8">SPIELEN</system:String>
+    <system:String x:Key="item9">Überprüfen Sie, ob Sie das richtige Verzeichnis mit Ihren Spieldateien ausgewählt haben, dies kann im Menü Einstellungen erfolgen.</system:String>
     <system:String x:Key="item10">WARNUNG:</system:String>
     <system:String x:Key="item11">Sie müssen H1Z1: Just Survive auf Ihrem Steam Konto besitzen, um es herunterladen zu können. Dieses Projekt unterstützt keine Piraterie.</system:String>
     <system:String x:Key="item12">Trete der Community bei</system:String>
     <system:String x:Key="item13">Fehler beim Starten des Spiels:</system:String>
-    <system:String x:Key="item14">Spiel im angegebenen Verzeichnis nicht gefunden.\n\nÜberprüfen Sie, ob Sie das richtige Verzeichnis mit Ihren Spieldateien ausgewählt haben, dies kann im Einstellungsmenü erfolgen.</system:String>
+    <system:String x:Key="item14">Spiel im angegebenen Verzeichnis nicht gefunden.</system:String>
     <system:String x:Key="item15">Sie müssen H1Z1: Just Survive auf Ihrem Steam-Konto besitzen, um es herunterladen zu können.</system:String>
     <system:String x:Key="item17">Anmeldung bei Steam nicht möglich:</system:String>
     <system:String x:Key="item18">HINZUFÜGEN</system:String>
+    <system:String x:Key="item19">Bitte stellen Sie sicher, dass Sie das Feld Auth-Code ausfüllen.</system:String>
     <system:String x:Key="item21">Depotschlüssel für {0} Ergebnis: {1}</system:String>
     <system:String x:Key="item23">Download abgeschlossen!</system:String>
     <system:String x:Key="item24">Müssen Sie eine andere Version herunterladen? Drücken Sie die Schaltfläche unten, um sich erneut anzumelden!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Verarbeitungsdepot {0} - {1}</system:String>
     <system:String x:Key="item57">Vorabzuweisung von Speicherplatz...</system:String>
     <system:String x:Key="item58">Die Spielversion wird von H1Emu nicht unterstützt.\n\nBitte denken Sie daran, die Spielversion entweder vom 15. Januar 2015 oder vom 22. Dezember 2016 zu verwenden.\n\nSie müssen eine dieser Versionen mit diesem Launcher mit Ihrem Steam-Konto herunterladen, das Just Survive-Eigentümer ist.</system:String>
-    <system:String x:Key="item59">Benutzername</system:String>
-    <system:String x:Key="item60">Passwort</system:String>
+    <system:String x:Key="item59">Benutzername...</system:String>
+    <system:String x:Key="item60">Passwort...</system:String>
     <system:String x:Key="item61">Alle Details zum Update anzeigen...</system:String>
     <system:String x:Key="item62">Einstellungen...</system:String>
     <system:String x:Key="item63">Und ein besonderes Dankeschön an alle, die sich der Community angeschlossen und die Motivation am Leben erhalten haben!</system:String>
