--- a/H1EmuLauncher/Language/StringResources.en.xaml
+++ b/H1EmuLauncher/Language/StringResources.en.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Version</system:String>
     <system:String x:Key="item4">Please wait</system:String>
     <system:String x:Key="item8">PLAY</system:String>
+    <system:String x:Key="item9">Check you have selected the correct directory containing your game files, this can be done in the Settings menu.</system:String>
     <system:String x:Key="item10">WARNING:</system:String>
     <system:String x:Key="item11">You must own H1Z1: Just Survive on your Steam account in order to download. This project does not support piracy.</system:String>
     <system:String x:Key="item12">Join the Community at</system:String>
     <system:String x:Key="item13">Error launching game:</system:String>
-    <system:String x:Key="item14">Game not found in directory.\n\nCheck you have selected the correct directory containing your game files, this can be done in the Settings menu.</system:String>
+    <system:String x:Key="item14">Game not found in directory.</system:String>
     <system:String x:Key="item15">You must own H1Z1: Just Survive on your Steam account in order to download.</system:String>
     <system:String x:Key="item17">Unable to login to Steam:</system:String>
     <system:String x:Key="item18">ADD</system:String>
+    <system:String x:Key="item19">Please make sure to fill in the Auth Code box.</system:String>
     <system:String x:Key="item21">Got depot key for {0} result: {1}</system:String>
     <system:String x:Key="item23">Download complete!</system:String>
     <system:String x:Key="item24">Need to download a different version? Press the button below to login again!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Processing depot {0} - {1}</system:String>
     <system:String x:Key="item57">Pre-allocating space...</system:String>
     <system:String x:Key="item58">Game version not supported by H1Emu.\n\nPlease remember to use game version either 15th January 2015 or 22nd December 2016.\n\nYou need to download one of these versions using this launcher with your Steam account that has Just Survive ownership.</system:String>
-    <system:String x:Key="item59">Username</system:String>
-    <system:String x:Key="item60">Password</system:String>
+    <system:String x:Key="item59">Username...</system:String>
+    <system:String x:Key="item60">Password...</system:String>
     <system:String x:Key="item61">View full details of the update...</system:String>
     <system:String x:Key="item62">Settings...</system:String>
     <system:String x:Key="item63">And a special thanks to everyone who joined the community and kept the motivation alive!</system:String>
