--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Versión</system:String>
     <system:String x:Key="item4">Espere por favor</system:String>
     <system:String x:Key="item8">JUGAR</system:String>
+    <system:String x:Key="item9">Verifica que hayas seleccionado el directorio correcto que contiene los archivos de tu juego, esto se puede hacer en el menú Configuración.</system:String>
     <system:String x:Key="item10">ADVERTENCIA:</system:String>
     <system:String x:Key="item11">Debes poseer H1Z1: Just Survive en tu cuenta de Steam para poder descargar. Este proyecto no apoya la piratería.</system:String>
     <system:String x:Key="item12">Únete a la comunidad en:</system:String>
     <system:String x:Key="item13">Error al ejecutar el juego:</system:String>
-    <system:String x:Key="item14">El juego no se encuentra en la carpeta especificada.\n\nCompruebe que ha seleccionado el directorio correcto que contiene los archivos de su juego, esto se puede hacer en el menú Configuración.</system:String>
+    <system:String x:Key="item14">El juego no se encuentra en la carpeta especificada.</system:String>
     <system:String x:Key="item15">Debe tener H1Z1: Just Survive en su cuenta de Steam para poder descargarlo.</system:String>
     <system:String x:Key="item17">No se pudo iniciar sesión en Steam:</system:String>
     <system:String x:Key="item18">AÑADIR</system:String>
+    <system:String x:Key="item19">Asegúrese de completar el cuadro Código de autenticación.</system:String>
     <system:String x:Key="item21">Se obtuvo la clave de depot para {0} resultado: {1}</system:String>
     <system:String x:Key="item23">¡Descarga completada!</system:String>
     <system:String x:Key="item24">¿Necesitas descargar una versión diferente? ¡Presiona en el botón de abajo para iniciar se sesión de nuevo!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Procesando depot {0} - {1}</system:String>
     <system:String x:Key="item57">Pre-asignando espacio en disco...</system:String>
     <system:String x:Key="item58">La versión del juego no es compatible con H1Emu.\n\nRecuerde usar la versión del juego del 15 de enero de 2015 o del 22 de diciembre de 2016.\n\nDebe descargar una de estas versiones usando este iniciador con su cuenta de Steam que tiene la propiedad de Just Survive.</system:String>
-    <system:String x:Key="item59">Nombre de usuario</system:String>
-    <system:String x:Key="item60">Contraseña</system:String>
+    <system:String x:Key="item59">Nombre de usuario...</system:String>
+    <system:String x:Key="item60">Contraseña...</system:String>
     <system:String x:Key="item61">Ver detalles de la actualización...</system:String>
     <system:String x:Key="item62">Configuración...</system:String>
     <system:String x:Key="item63">¡Gracias a todos los que se unieron a la comunidad y mantuvieron la motivación en el proyecto!</system:String>
