--- a/H1EmuLauncher/Language/StringResources.fr.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Màj Version</system:String>
     <system:String x:Key="item4">S'il vous plaît, attendez</system:String>
     <system:String x:Key="item8">JOUER</system:String>
+    <system:String x:Key="item9">Vérifiez que vous avez sélectionné le bon répertoire contenant vos fichiers de jeu, cela peut être fait dans le menu Paramètres.</system:String>
     <system:String x:Key="item10">AVERTISSEMENT:</system:String>
     <system:String x:Key="item11">Vous devez posséder H1Z1 : Just Survive sur votre compte Steam pour pouvoir le télécharger. Ce projet ne soutient pas le piratage.</system:String>
     <system:String x:Key="item12">Rejoignez la communauté sur</system:String>
     <system:String x:Key="item13">Erreur au lancement du jeu :</system:String>
-    <system:String x:Key="item14">Jeu introuvable dans le répertoire spécifié.\n\nVérifiez que vous avez sélectionné le bon répertoire contenant vos fichiers de jeu, cela peut être fait dans le menu Paramètres.</system:String>
+    <system:String x:Key="item14">Jeu introuvable dans le répertoire spécifié.</system:String>
     <system:String x:Key="item15">Vous devez posséder H1Z1: Just Survive sur votre compte Steam pour pouvoir télécharger.</system:String>
     <system:String x:Key="item17">Impossible de se connecter à Steam :</system:String>
     <system:String x:Key="item18">AJOUTER</system:String>
+    <system:String x:Key="item19">Assurez-vous de remplir la case Code d'authentification.</system:String>
     <system:String x:Key="item21">La clé de dépôt pour {0} obtenue , résultat : {1}</system:String>
     <system:String x:Key="item23">Téléchargement terminé !</system:String>
     <system:String x:Key="item24">Vous avez besoin de télécharger une autre version ? Appuyez sur le bouton ci-dessous pour vous connecter à nouveau !</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Dépôt de traitement {0} - {1}</system:String>
     <system:String x:Key="item57">Pré-attribution de l'espace...</system:String>
     <system:String x:Key="item58">Version du jeu non prise en charge par H1Emu.\n\nN'oubliez pas d'utiliser la version du jeu du 15 janvier 2015 ou du 22 décembre 2016.\n\nVous devez télécharger l'une de ces versions à l'aide de ce lanceur avec votre compte Steam qui appartient à Just Survive.</system:String>
-    <system:String x:Key="item59">Nom d'utilisateur</system:String>
-    <system:String x:Key="item60">Mot de passe</system:String>
+    <system:String x:Key="item59">Nom d'utilisateur...</system:String>
+    <system:String x:Key="item60">Mot de passe...</system:String>
     <system:String x:Key="item61">Voir tous les détails de la mise à jour...</system:String>
     <system:String x:Key="item62">Paramètres...</system:String>
     <system:String x:Key="item63">Et un grand merci à tous ceux qui ont rejoint la communauté et qui encouragent les développeurs!</system:String>
