--- a/H1EmuLauncher/Language/StringResources.hr.xaml
+++ b/H1EmuLauncher/Language/StringResources.hr.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Verzija</system:String>
     <system:String x:Key="item4">Molimo pričekajte</system:String>
     <system:String x:Key="item8">Igraj</system:String>
+    <system:String x:Key="item9">Provjerite jeste li odabrali ispravan direktorij koji sadrži vaše datoteke igre, to možete učiniti u izborniku Postavke.</system:String>
     <system:String x:Key="item10">UPOZORENJE:</system:String>
     <system:String x:Key="item11">Da bi ste igrali H1Z1: Just Survive morate imati kopiju igre na svojem Steam računu. Projekt ne podržava piratstvo.</system:String>
     <system:String x:Key="item12">Pridružite se zajednici klikom na</system:String>
     <system:String x:Key="item13">Pogreška pri pokretanju igrice:</system:String>
-    <system:String x:Key="item14">Igra nije pronađena u navedenom direktoriju.\n\nProvjerite jeste li odabrali ispravan direktorij koji sadrži vaše datoteke igre, to možete učiniti u izborniku Postavke.</system:String>
+    <system:String x:Key="item14">Igra nije pronađena u navedenom direktoriju.</system:String>
     <system:String x:Key="item15">Morate posjedovati H1Z1: Just Survive na svom Steam računu kako biste preuzeli.</system:String>
     <system:String x:Key="item17">Pogreška pri povezivanju sa Steam računom:</system:String>
     <system:String x:Key="item18">DODATI</system:String>
+    <system:String x:Key="item19">Obavezno ispunite polje Auth Code.</system:String>
     <system:String x:Key="item21">Dobiven depo kljuć za {0} rezultat: {1}</system:String>
     <system:String x:Key="item23">Preuzimanje dovršeno!</system:String>
     <system:String x:Key="item24">Potrebna vam je druga verzija? Pritisnite na gumb ispod da bi ste se ponovno prijavili!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Procesiranje depoa {0} - {1}</system:String>
     <system:String x:Key="item57">Alociranje prostora...</system:String>
     <system:String x:Key="item58">H1Emu ne podržava verziju igre.\n\nNe zaboravite koristiti verziju igre od 15. siječnja 2015. ili 22. prosinca 2016.\n\nMorate preuzeti jednu od ovih verzija pomoću ovog pokretača sa svojim Steam računom koji ima Just Survive vlasništvo.</system:String>
-    <system:String x:Key="item59">Korisničko ime</system:String>
-    <system:String x:Key="item60">Šifra</system:String>
+    <system:String x:Key="item59">Korisničko ime...</system:String>
+    <system:String x:Key="item60">Šifra...</system:String>
     <system:String x:Key="item61">Prikaži detalje nove verzije...</system:String>
     <system:String x:Key="item62">Postavke...</system:String>
     <system:String x:Key="item63">I posebna zahvala svima koji su se pridružili našoj zajednici i što su nas motivirali da nastavimo!</system:String>
