--- a/H1EmuLauncher/Language/StringResources.nl-NL.xaml
+++ b/H1EmuLauncher/Language/StringResources.nl-NL.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Versie</system:String>
     <system:String x:Key="item4">Even geduld aub</system:String>
     <system:String x:Key="item8">SPELEN</system:String>
+    <system:String x:Key="item9">Controleer of je de juiste map met je spelbestanden hebt geselecteerd, dit kun je doen in het menu Instellingen.</system:String>
     <system:String x:Key="item10">WAARSCHUWING:</system:String>
     <system:String x:Key="item11">Je moet H1Z1: Just Survive op steam hebben om het te kunnen downloaden. Dit project ondersteund geen piraterij.</system:String>
     <system:String x:Key="item12">word lid van de gemeenschap via:</system:String>
     <system:String x:Key="item13">Fout tijdens het opstarten van H1Z1:</system:String>
-    <system:String x:Key="item14">Spel niet gevonden in gespecificeerde map.\n\nControleer of je de juiste map met je spelbestanden hebt geselecteerd, dit kun je doen in het menu Instellingen.</system:String>
+    <system:String x:Key="item14">Spel niet gevonden in gespecificeerde map.</system:String>
     <system:String x:Key="item15">Je moet H1Z1: Just Survive op je Steam-account hebben om te kunnen downloaden.</system:String>
     <system:String x:Key="item17">Kan niet inloggen op Steam:</system:String>
     <system:String x:Key="item18">TOEVOEGEN</system:String>
+    <system:String x:Key="item19">Zorg ervoor dat u het veld Auth-code invult.</system:String>
     <system:String x:Key="item21">Kreeg depotsleutel voor {0} resultaat: {1}</system:String>
     <system:String x:Key="item23">Download voltooid</system:String>
     <system:String x:Key="item24">Een andere versie nodig? Klik de knop om opnieuw in te loggen!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Verwerken depot {0} - {1}</system:String>
     <system:String x:Key="item57">Pre-alocatie opslag...</system:String>
     <system:String x:Key="item58">Spelversie wordt niet ondersteund door H1Emu.\n\nVergeet niet om de spelversie te gebruiken op 15 januari 2015 of 22 december 2016.\n\nJe moet een van deze versies downloaden met behulp van deze launcher met je Steam-account dat eigendom is van Just Survive.</system:String>
-    <system:String x:Key="item59">Steam ID</system:String>
-    <system:String x:Key="item60">Wachtwoord</system:String>
+    <system:String x:Key="item59">Steam ID...</system:String>
+    <system:String x:Key="item60">Wachtwoord...</system:String>
     <system:String x:Key="item61">Bekijk alle details van update...</system:String>
     <system:String x:Key="item62">Instellingen...</system:String>
     <system:String x:Key="item63">En een speciale dank aan iedereen die zich aan de gemeenschap heeft gesloten en de motivatie levendig heeft gehouden!</system:String>
