--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Wersja</system:String>
     <system:String x:Key="item4">Proszę czekać</system:String>
     <system:String x:Key="item8">GRAJ</system:String>
+    <system:String x:Key="item9">Sprawdź, czy wybrałeś właściwy katalog zawierający pliki gry, można to zrobić w menu Ustawienia.</system:String>
     <system:String x:Key="item10">UWAGA:</system:String>
     <system:String x:Key="item11">Musisz posiadać H1Z1: Just Survive na twoim koncie Steam, aby pobrać. Nie wspieramy piractwa.</system:String>
     <system:String x:Key="item12">Dołącz do społeczności: </system:String>
     <system:String x:Key="item13">Błąd podczas startu gry:</system:String>
-    <system:String x:Key="item14">Nie znaleziono gry w podanej ścieżce.\n\nSprawdź, czy wybrałeś właściwy katalog zawierający pliki gry, można to zrobić w menu Ustawienia.</system:String>
+    <system:String x:Key="item14">Nie znaleziono gry w podanej ścieżce.</system:String>
     <system:String x:Key="item15">Dla tej wersji gry nie ma serwera testowego. (Grudzień 2016)</system:String>
     <system:String x:Key="item17">Nie można zalogować się do Steam:</system:String>
     <system:String x:Key="item18">DODAJ</system:String>
+    <system:String x:Key="item19">Pamiętaj, aby wypełnić pole Kod autoryzacji.</system:String>
     <system:String x:Key="item21">Otrzymano klucz: {1} dla {0}</system:String>
     <system:String x:Key="item23">Pobieranie zakończone!</system:String>
     <system:String x:Key="item24">Chcesz pobrać inną wersję? Użyj przycisku poniżej, aby zalogować się ponownie!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Przetwarzam depot {0} - {1}</system:String>
     <system:String x:Key="item57">Wstępne przydzielanie miejsca na dysku...</system:String>
     <system:String x:Key="item58">Wersja gry nie jest obsługiwana przez H1Emu.\n\nPamiętaj, aby użyć wersji gry 15 stycznia 2015 lub 22 grudnia 2016.\n\nMusisz pobrać jedną z tych wersji za pomocą tego programu uruchamiającego ze swoim kontem Steam, które jest właścicielem Just Survive.</system:String>
-    <system:String x:Key="item59">Nazwa użytkownika</system:String>
-    <system:String x:Key="item60">Hasło</system:String>
+    <system:String x:Key="item59">Nazwa użytkownika...</system:String>
+    <system:String x:Key="item60">Hasło...</system:String>
     <system:String x:Key="item61">Sprawdź pełen opis aktuzacji...</system:String>
     <system:String x:Key="item62">Ustawienia...</system:String>
     <system:String x:Key="item63">Specjalne podziękowania dla wszystkich, którzy dołączyli do społeczności!</system:String>
