--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Versão</system:String>
     <system:String x:Key="item4">Por favor, espere</system:String>
     <system:String x:Key="item8">JOGAR</system:String>
+    <system:String x:Key="item9">Verifique se você selecionou o diretório correto contendo os arquivos do jogo, isso pode ser feito no menu Configurações.</system:String>
     <system:String x:Key="item10">AVISO:</system:String>
     <system:String x:Key="item11">Tem de possuir H1Z1: Just Survive na sua conta Steam para fazer download do jogo. Este projecto não apoia a pirataria.</system:String>
     <system:String x:Key="item12">Junta-te à comunidade em</system:String>
     <system:String x:Key="item13">Erro ao iniciar o jogo:</system:String>
-    <system:String x:Key="item14">O jogo não foi encontrado no diretório especificado.\n\nVerifique se você selecionou o diretório correto contendo os arquivos do jogo, isso pode ser feito no menu Configurações.</system:String>
+    <system:String x:Key="item14">O jogo não foi encontrado no diretório especificado.</system:String>
     <system:String x:Key="item15">Aby pobrać, musisz posiadać H1Z1: Just Survive na swoim koncie Steam.</system:String>
     <system:String x:Key="item17">Incapaz de iniciar a sessão no Steam:</system:String>
     <system:String x:Key="item18">ADD</system:String>
+    <system:String x:Key="item19">Certifique-se de preencher a caixa Auth Code.</system:String>
     <system:String x:Key="item21">Chave de depósito para {0} resultado: {1}</system:String>
     <system:String x:Key="item23">Download completo!</system:String>
     <system:String x:Key="item24">Precisa de descarregar outra versão? Prima o botão abaixo para iniciar novamente a sessão!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Depósito de processamento {0} - {1}</system:String>
     <system:String x:Key="item57">Pré-alocação de espaço...</system:String>
     <system:String x:Key="item58">Versão do jogo não suportada pelo H1Emu.\n\nLembre-se de usar a versão do jogo em 15 de janeiro de 2015 ou 22 de dezembro de 2016.\n\nVocê precisa baixar uma dessas versões usando este iniciador com sua conta Steam que possui Just Survive.</system:String>
-    <system:String x:Key="item59">Nome de utilizador</system:String>
-    <system:String x:Key="item60">Senha</system:String>
+    <system:String x:Key="item59">Nome de utilizador...</system:String>
+    <system:String x:Key="item60">Senha...</system:String>
     <system:String x:Key="item61">Ver detalhes da atualização...</system:String>
     <system:String x:Key="item62">Definições...</system:String>
     <system:String x:Key="item63">E um agradecimento especial a todos os que aderiram à comunidade e mantiveram viva a motivação!</system:String>
