--- a/H1EmuLauncher/Language/StringResources.ru-RU.xaml
+++ b/H1EmuLauncher/Language/StringResources.ru-RU.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Обновление</system:String>
     <system:String x:Key="item4">Пожалуйста подождите</system:String>
     <system:String x:Key="item8">ИГРАТЬ</system:String>
+    <system:String x:Key="item9">Убедитесь, что вы выбрали правильный каталог, содержащий файлы игры, это можно сделать в меню Настройки.</system:String>
     <system:String x:Key="item10">ВНИМАНИЕ:</system:String>
     <system:String x:Key="item11">Для загрузки вы должны иметь H1Z1: Just Survive в своей учетной записи Steam. Этот проект не поддерживает пиратство.</system:String>
     <system:String x:Key="item12">Присоединяйтесь к сообществу на</system:String>
     <system:String x:Key="item13">Ошибка запуска игры:</system:String>
-    <system:String x:Key="item14">Игра не найдена в указанной директории.\n\nПроверьте, что вы выбрали правильный каталог, содержащий ваши игровые файлы, это можно сделать в меню Настройки.</system:String>
+    <system:String x:Key="item14">Игра не найдена в указанной директории.</system:String>
     <system:String x:Key="item15">Вы должны иметь H1Z1: Just Survive в своей учетной записи Steam, чтобы загрузить.</system:String>
     <system:String x:Key="item17">Невозможно войти в Steam:</system:String>
     <system:String x:Key="item18">ДОБАВИТЬ</system:String>
+    <system:String x:Key="item19">Обязательно заполните поле Код авторизации.</system:String>
     <system:String x:Key="item21">Получен depot key для {0} результат: {1}</system:String>
     <system:String x:Key="item23">Загрузка завершена!</system:String>
     <system:String x:Key="item24">Нужно скачать другую версию? Нажмите кнопку ниже, чтобы снова войти в систему!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Обработка depot {0} - {1}</system:String>
     <system:String x:Key="item57">Выделение места...</system:String>
     <system:String x:Key="item58">Версия игры не поддерживается H1Emu.\n\nНе забудьте использовать версию игры от 15 января 2015 года или 22 декабря 2016 года.\n\nВам нужно загрузить одну из этих версий, используя этот лаунчер с вашей учетной записью Steam, которой принадлежит Just Survive.</system:String>
-    <system:String x:Key="item59">Имя пользователя</system:String>
-    <system:String x:Key="item60">Пароль</system:String>
+    <system:String x:Key="item59">Имя пользователя...</system:String>
+    <system:String x:Key="item60">Пароль...</system:String>
     <system:String x:Key="item61">Посмотреть полную информацию об обновлении...</system:String>
     <system:String x:Key="item62">Настройки...</system:String>
     <system:String x:Key="item63">И отдельное спасибо всем, кто присоединился к сообществу и поддерживает нас!</system:String>
