--- a/H1EmuLauncher/Language/StringResources.tr-TR.xaml
+++ b/H1EmuLauncher/Language/StringResources.tr-TR.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">Versiyonu</system:String>
     <system:String x:Key="item4">Lütfen bekle</system:String>
     <system:String x:Key="item8">OYNA</system:String>
+    <system:String x:Key="item9">Oyun dosyalarınızı içeren doğru dizini seçip seçmediğinizi kontrol edin, bu Ayarlar menüsünden yapılabilir.</system:String>
     <system:String x:Key="item10">UYARI:</system:String>
     <system:String x:Key="item11">İndirmek için Steam hesabınızda H1Z1: Just Survive oyununa sahip olmanız gereklidir. Bu proje korsan oyunları desteklemez.</system:String>
     <system:String x:Key="item12">Topluluğa bağlanın: </system:String>
     <system:String x:Key="item13">Oyun başlatma hatası:</system:String>
-    <system:String x:Key="item14">Oyun belirtilen klasörde bulunamadı.\n\nOyun dosyalarınızı içeren doğru dizini seçtiğinizden emin olun, bu Ayarlar menüsünden yapılabilir.</system:String>
+    <system:String x:Key="item14">Oyun belirtilen klasörde bulunamadı.</system:String>
     <system:String x:Key="item15">İndirebilmek için Steam hesabınızda H1Z1: Just Survive'a sahip olmalısınız.</system:String>
     <system:String x:Key="item17">Steam'e bağlanılamıyor:</system:String>
     <system:String x:Key="item18">EKLE</system:String>
+    <system:String x:Key="item19">Lütfen Kimlik Doğrulama Kodu kutusunu doldurduğunuzdan emin olun.</system:String>
     <system:String x:Key="item21">{0} için depo anahtarı mevcut: {1}</system:String>
     <system:String x:Key="item23">İndirme tamamlandı!</system:String>
     <system:String x:Key="item24">Başka bir versiyon yüklemek ister misiniz? Tekrar girmöek için tuşa alttaki basın!</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">Depo işleniyor {0} - {1}</system:String>
     <system:String x:Key="item57">Disk alanı tanımlanıyor...</system:String>
     <system:String x:Key="item58">Oyun sürümü H1Emu tarafından desteklenmiyor.\n\nLütfen 15 Ocak 2015 veya 22 Aralık 2016 oyun sürümünü kullanmayı unutmayın.\n\nJust Survive sahipliğine sahip Steam hesabınızla bu başlatıcıyı kullanarak bu sürümlerden birini indirmeniz gerekiyor.</system:String>
-    <system:String x:Key="item59">Kullanıcı adı</system:String>
-    <system:String x:Key="item60">Şifre</system:String>
+    <system:String x:Key="item59">Kullanıcı adı...</system:String>
+    <system:String x:Key="item60">Şifre...</system:String>
     <system:String x:Key="item61">Güncellemenin tüm detaylarını göster...</system:String>
     <system:String x:Key="item62">Ayarlar...</system:String>
     <system:String x:Key="item63">ve Topluluk'a katılan ve motivasyonu yüksek tutan herkese özel bir teşekkür!</system:String>
