--- a/H1EmuLauncher/Language/StringResources.zh-cn.xaml
+++ b/H1EmuLauncher/Language/StringResources.zh-cn.xaml
@@ -7,14 +7,16 @@
     <system:String x:Key="item3">最新版本</system:String>
     <system:String x:Key="item4">请稍等</system:String>
     <system:String x:Key="item8">运行游戏</system:String>
+    <system:String x:Key="item9">检查您是否选择了包含游戏文件的正确目录，这可以在“设置”菜单中完成。</system:String>
     <system:String x:Key="item10">注意</system:String>
     <system:String x:Key="item11">你的steam账户中必须要有H1Z1：Just Survive这个游戏才能下载游戏本体，本项目不支持盗版。</system:String>
     <system:String x:Key="item12">加入社区在</system:String>
     <system:String x:Key="item13">启动游戏错误：</system:String>
-    <system:String x:Key="item14">未在指定的目录中找到游戏。\n\n检查您是否选择了包含游戏文件的正确目录，这可以在“设置”菜单中完成。</system:String>
+    <system:String x:Key="item14">未在指定的目录中找到游戏。</system:String>
     <system:String x:Key="item15">您必须在 Steam 帐户上拥有 H1Z1：Just Survive 才能下载。</system:String>
     <system:String x:Key="item17">无法登录到Steam:</system:String>
     <system:String x:Key="item18">添加</system:String>
+    <system:String x:Key="item19">请务必填写授权码框。</system:String>
     <system:String x:Key="item21">获取数据包密钥 {0} 结果： {1}</system:String>
     <system:String x:Key="item23">下载完成！</system:String>
     <system:String x:Key="item24">需要下载其他版本吗？按下面的登录按钮返回Steam登录界面！</system:String>
@@ -48,8 +50,8 @@
     <system:String x:Key="item56">处理数据包 {0} - {1}</system:String>
     <system:String x:Key="item57">预分配空间...</system:String>
     <system:String x:Key="item58">H1Emu 不支持游戏版本。\n\n请记住使用 2015 年 1 月 15 日或 2016 年 12 月 22 日的游戏版本。\n\n您需要使用具有 Just Survive 所有权的 Steam 帐户使用此启动器下载这些版本之一。</system:String>
-    <system:String x:Key="item59">用户名</system:String>
-    <system:String x:Key="item60">这里输入Steam密码</system:String>
+    <system:String x:Key="item59">用户名...</system:String>
+    <system:String x:Key="item60">这里输入Steam密码...</system:String>
     <system:String x:Key="item61">查看最新版本的详细信息...</system:String>
     <system:String x:Key="item62">游戏配置...</system:String>
     <system:String x:Key="item63">感谢每一位富有激情且长期活跃在社区的人！</system:String>
